--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# exception example (all 3 lines)
+# !/node_modules (1. overide - dont ignore 'node_modules' folder)
+# /node_modules/* (2. ignore all folders under 'node_modules' folder)
+# !/node_modules/@schematics (3. exclude specific folder)
+
 # compiled output
 /dist
 /dist-server
@@ -7,7 +12,30 @@
 /out-tsc
 
 # dependencies
-# /node_modules
+/node_modules
+
+# dependencies - exclude specific files used for overriding config
+!/node_modules
+/node_modules/*
+
+!/node_modules/@schematics
+/node_modules/@schematics/angular/*
+!/node_modules/@schematics/angular/component
+/node_modules/@schematics/angular/component/*
+!/node_modules/@schematics/angular/component/files
+/node_modules/@schematics/angular/component/files/*/*/*
+!/node_modules/@schematics/angular/component/files/*/*/*.pug
+!/node_modules/@schematics/angular/component/files/*/*/*.component.ts
+
+!/node_modules/@angular
+/node_modules/@angular/*
+!/node_modules/@angular/cli
+/node_modules/@angular/cli/*
+!/node_modules/@angular/cli/models
+/node_modules/@angular/cli/models/*
+!/node_modules/@angular/cli/models/webpack-configs/
+/node_modules/@angular/cli/models/webpack-configs/*
+!/node_modules/@angular/cli/models/webpack-configs/common.js
 
 # IDEs and editors
 /.idea
