Fixed Error caused by Unknown/Untracked Ts files outside of “src” folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,9 @@
       "es2017",
       "dom"
     ]
-  }
+  },
+  "exclude": [
+    "cli-patch/@schematics/angular/**/files/__path__/*.ts",
+    "cli-patch/@schematics/angular/**/files/__path__/**/*.ts"
+  ]
 }
