Fixed Unit Test error caused by double wildcard “**”

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
   },
   "exclude": [
     "cli-patch/@schematics/angular/**/files/__path__/*.ts",
-    "cli-patch/@schematics/angular/**/files/__path__/**/*.ts"
+    "cli-patch/@schematics/angular/**/files/__path__/__name@dasherize@if-flat__/*.ts"
   ]
 }
