--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "@angular/cli": "1.6.6",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
-    "@compodoc/compodoc": "^1.0.5",
+    "@compodoc/compodoc": "^1.1.7",
+    "@ngrx/store": "^5.2.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
@@ -44,7 +45,7 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
+    "protractor": "^5.4.1",
     "pug": "^2.0.0-rc.4",
     "pug-html-loader": "^1.1.5",
     "tree-cli": "^0.4.12",
