--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,15 @@
+# Comment
 language: javascript
 
 node:
   - "11.4.0"
 
 install:
+  - npm install -g @angular/cli@1.6.6
   - npm install
+
+before_script:
+  - npm run patch-cli
 
 script:
   - ng test
