--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node:
   - "11.4.0"
 
 install:
-  - npm install -g @angular/cli@1.6.6
+  - npm install -g @angular/cli@1.6.6 typescript@2.5.3
   - npm install
 
 before_script:
