--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,7 @@ language: javascript
 node:
   - "6.9.4"
 
-cache:
-  - npm
+cache: npm
 
 install:
   - npm install -g @angular/cli@1.6.6 typescript@2.5.3
