CI - Travis: test

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,7 @@ install:
   - npm install
 
 before_script:
-  - cp -r ./patch/ng-cli/ ./node_modules/
-  - cat ./node_modules/@angular/cli/models/webpack-configs/common.js
-  - cp -r /home/travis/build/CharltonC/boilerplate-angular-5-demo/patch/ng-cli/ /home/travis/build/CharltonC/boilerplate-angular-5-demo/node_modules/
-  - cat ./node_modules/@angular/cli/models/webpack-configs/common.js
+  - cp -rf ./patch/ng-cli/ ./node_modules/
 
 script:
   - cat ./node_modules/@angular/cli/models/webpack-configs/common.js
